
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.md-5</groupId>
    <artifactId>bungeecord-parent</artifactId>
    <version>1.15-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>BungeeCord-Parent</name>
    <description>Parent project for all BungeeCord modules.</description>
    <url>https://github.com/HexagonMC/BungeeCord</url>
    <inceptionYear>2012</inceptionYear>
    <organization>
        <name>SpigotMC</name>
        <url>https://github.com/SpigotMC</url>
    </organization>
    <licenses>
        <license>
            <name>The BSD 3-Clause License</name>
            <url>http://opensource.org/licenses/BSD-3-Clause</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>md_5</id>
        </developer>
        <developer>
            <id>Zartec</id>
        </developer>
        <developer>
            <id>ghac</id>
        </developer>
    </developers>

    <modules>
        <module>api</module>
        <module>bootstrap</module>
        <module>chat</module>
        <module>config</module>
        <module>event</module>
        <module>log</module>
        <module>module</module>
        <module>protocol</module>
        <module>proxy</module>
        <module>query</module>
        <module>native</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:HexagonMC/BungeeCord.git</connection>
        <developerConnection>scm:git:git@github.com:HexagonMC/BungeeCord.git</developerConnection>
        <url>git@github.com:HexagonMC/BungeeCord.git</url>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/HexagonMC/BungeeCord/issues</url>
    </issueManagement>
    <ciManagement>
        <system>travis-ci</system>
        <url>https://travis-ci.org/HexagonMC/BungeeCord</url>
    </ciManagement>

    <distributionManagement>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <build.number>unknown</build.number>
        <netty.version>4.1.45.Final</netty.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>21.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>findbugs-annotations</artifactId>
            <version>3.0.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.10</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>net.md-5</groupId>
                <artifactId>scriptus</artifactId>
                <version>0.3.2</version>
                <configuration>
                    <format>git:${project.name}:${project.version}:%s:${build.number}</format>
                </configuration>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>describe</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                    <includeResources>false</includeResources>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>8.29</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>animal-sniffer-maven-plugin</artifactId>
                <version>1.18</version>
                <executions>
                    <execution>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <signature>
                        <groupId>org.codehaus.mojo.signature</groupId>
                        <artifactId>java18</artifactId>
                        <version>1.0</version>
                    </signature>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>dist</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.1</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.projectlombok</groupId>
                        <artifactId>lombok-maven-plugin</artifactId>
                        <version>1.18.10.0</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>delombok</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <addOutputDirectory>false</addOutputDirectory>
                            <outputDirectory>${project.build.directory}/delombok</outputDirectory>
                            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.1.1</version>
                        <executions>
                            <!-- Execute Javadoc once normally to catch any warnings -->
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                            <!-- Then execute it again to generate properly with delombok -->
                            <execution>
                                <id>delombok</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <!-- lombok does not add @return or @param which causes warnings, so ignore -->
                                    <doclint>none</doclint>
                                    <sourcepath>${project.build.directory}/delombok</sourcepath>
                                </configuration>
                            </execution>
                        </executions>
                        <configuration>
                            <quiet>true</quiet>
                            <failOnWarnings>true</failOnWarnings>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
